feat(ORGAN): Event Manager v1